<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@drawable/img7">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/senderNum"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretkey"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/secretKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encmsg"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/encryptedMsg"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decmsg"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/decryptedMsg"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_weight="0.05" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/submit"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#fff"
            android:background="#66FF0000" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
             android:textColor="#fff"
            android:background="#66FF0000" />
    </LinearLayout>

</LinearLayout>