<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
     android:background="@drawable/img7">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
             android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <EditText
        android:id="@+id/recNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretkey"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/secretKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
         android:textColor="#fff"
         android:textSize="20dp"
         android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/plainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Send"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:text="@string/send"
            android:background="#66FF0000" 
            android:textColor="#fff"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:background="#66FF0000" />
    </LinearLayout>

</LinearLayout>